(fix): add visible to grid and midia

--- a/src/App.css
+++ b/src/App.css
@@ -138,7 +138,6 @@ body {
     .sm-app\:col-span-3 {
         grid-column: span 3 / span 3;
     }
-
 }
 
 @media screen and (min-width: 900px) {
@@ -224,4 +223,17 @@ body {
 
 .h-\[298px\] {
     height: 298px;
+}
+
+/** GridMidia **/
+.mb-8 {
+    margin-bottom: 2rem; /* 32px */
+}
+
+.pt-4 {
+    padding: 1rem; /* 16px */
+}
+
+.justify-items-start {
+    justify-items: start;
 }
